--- a/style.css
+++ b/style.css
@@ -7,6 +7,78 @@
 }
 
 body{
-  background: #eee;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(45deg, #0a0a0a, #3a4452);
   font-family: 'Rubik', sans-serif;
+}
+
+.calculator{
+  border: 1px solid #717377;
+  padding:  20px;
+  border-radius: 16px;
+  background: transparent;
+  box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.5);
+}
+
+.calculator h4{
+  font-size: 25px;
+  color: #FFEA20;
+  text-align: center;
+  margin: 20px 0 10px 0;
+  cursor: pointer;
+}
+
+.calculator h4 sup{
+  color: #ffffff;
+  font-size: 14px;
+
+}
+
+
+input{
+  color: #f9f9f9;
+  width: 320px;
+  border: none;
+  padding: 24px;
+  font-size: 40px;
+  margin: 40px 0;
+  background: transparent;
+  box-shadow: 0px 3px 15px rgba(84, 84, 84, .5);
+  text-align: right;
+  cursor: pointer;
+}
+
+input::placeholder{
+  color: #ffffff;
+}
+
+button{
+  border: none;
+  width: 60px;
+  height: 60px;
+  margin: 10px;
+  border: 1px solid #6f6d6d;
+  border-radius: 50%;
+  background: transparent;
+  color: #ffffff;
+  font-size: 25px;
+  box-shadow: -3px -3px 10px rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+}
+
+.oparator{
+  color: #00ff1e;
+}
+.btn-1{
+  background: #7a04cf;
+}
+.btn-2{
+  background: #05cfef;
+}
+.equalbtn{
+  background: #ff4500;
 }
